[package]
name = "ls"
version = "0.1.0"
edition = "2024"
authors = ["Industrial <tom.wieland@gmail.com>"]
description = "List directory contents (POSIX-oriented subset) using id_effect"
license = "MIT"

[dependencies]
id_effect = "0.2"

[lib]
name = "ls"
path = "src/lib.rs"

[[bin]]
name = "ls"
path = "src/main.rs"
