[package]
name = "nix-eval"
version = "0.1.0"
edition = "2021"
authors = ["Industrial <tom.wieland@gmail.com>"]
license = "MIT"
license-file = "LICENSE"
description = "A pure Rust Nix expression evaluator"
repository = "https://github.com/yourusername/nix-eval"
readme = "README.md"
keywords = ["nix", "evaluator", "parser", "expression"]
categories = ["parsing", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rnix = "0.11"
rowan = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
base32 = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[[bin]]
name = "nix-eval"
path = "src/main.rs"

[lib]
name = "nix_eval"
path = "src/lib.rs"

[[bench]]
name = "evaluation"
harness = false
