[package]
name = "sort"
version = "0.1.0"
edition = "2024"
authors = ["Industrial <tom.wieland@gmail.com>"]
description = "Sort lines (POSIX/GNU subset) using id_effect"
license = "MIT"

[dependencies]
id_effect = "0.2"

[lib]
name = "sort"
path = "src/lib.rs"

[[bin]]
name = "sort"
path = "src/main.rs"
